pages setUp with header. need to make some edits to header

--- a/front-end/src/Header.css
+++ b/front-end/src/Header.css
@@ -5,8 +5,7 @@
 }
 
 .Header-header {
-  background-color: #ffffff;
-
+  background-color: #f80000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +16,8 @@
 
 .logo {
   display: inline-block;
+  justify-self: start;
+  margin-left: 20px;
   
 }
 
@@ -29,7 +30,7 @@
 }
 
 .nav-item a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -38,9 +39,37 @@
 }
 
 .active{
-  border-bottom: 3px solid red;
+  border-bottom: 3px solid black;
 }
 
+.nav-box {
+  display: inline-block;
+  padding: 10px 15px;
+}
+
+.nav-box:hover a {
+  color: rgb(148, 148, 148);
+}
+
+.nav-box a{
+  border: 1px solid white;
+  color: black;
+  border-radius: 30px;
+  background-color: white;
+  justify-content: 'center';
+  padding: 5px 20px;
+  text-decoration: none;
+} 
+
+.active-box {
+  border: 1px solid black;
+  color: black;
+  border-radius: 30px;
+  background-color: black;
+  justify-content: 'center';
+  padding: 5px 20px;
+  text-decoration: none;
+}
 
 
 .logo img {
