--- a/front-end/src/FAQHeader.css
+++ b/front-end/src/FAQHeader.css
@@ -1,19 +1,24 @@
 .faqbody{
   margin:0px;
-  margin-top:0px;
+  margin-top:50px;
   padding: 0px;
 }
+
+
 .faqnav{
   display: flex;
-  top: 50px;
-  width: 100%;
-  overflow: hidden;
-  height: 100px;
+  top: 80px;
+  overflow: visible;
+  height: 50px;
 }
+
+
 .left-links{
-  flex: 1 1 900px;
+  flex: 0.5 0.5 100px;
   text-align: left;
 }
+
+
 .links {
   display: inline-block;
   text-align: right;
@@ -22,9 +27,12 @@
   text-decoration: none;
   font-weight: bold;
 }
+
+
 .links:hover {
   color: gray;
 }
+
 
 h2 {
   font-weight: bolder;
