--- a/front-end/src/FAQHeader.css
+++ b/front-end/src/FAQHeader.css
@@ -1,36 +1,38 @@
 
-.faqnav{
-  display: flex;
-  overflow: visible;
-  height: 50px;
-  margin-top:50px;
-  margin-right: auto;
+.faqheaderbody{
+  margin:0px;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  margin-left: 5px;
+  padding: 0px;
 }
 
 
-.left-links{
+
+
+
+.faqnav{
+  display: flex;
+  top: 100px;
+  width: 100%;
+  overflow: auto;
+  height: auto;
+}
+
+.left{
+  flex: 1 1 100px;
   text-align: left;
-  flex-direction: column;
 }
 
 
 .links {
   display: inline-block;
-  text-align: right;
-  padding: 14px;
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.links2 {
-  display: inline-block;
-  text-align: right;
-  padding-top: 14px;
-  padding-right: 100px;
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  font-weight: bold;
+   text-align: right;
+   padding: 14px;
+   color: rgb(0, 0, 0);
+   text-decoration: none;
+   font-size: 17px;
+   font-weight: bolder;
 }
 
 
@@ -42,6 +44,7 @@
 .faqh2 {
   font-weight: bolder;
   font-size: 35px;
+  text-decoration: underline;
 }
 
   
