--- a/front-end/src/Eligibility.css
+++ b/front-end/src/Eligibility.css
@@ -4,10 +4,12 @@ html {
 }
 
 .eligibilitybody{
-    margin:0px;
-    margin-top:0px;
-    padding: 0px;
-  }
+  margin:0px;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  margin-left: 5px;
+  padding: 0px;
+}
 
   .sectionheader{
     padding-top: 5em;
@@ -15,13 +17,13 @@ html {
 
   .eligibilitynav{
     display: flex;
-    top: 50px;
+    top: 100px;
     width: 100%;
-    overflow: hidden;
-    height: 100px;
+    overflow: auto;
+    height: auto;
   }
 
-  .left-links{
+  .eligibilityleft-links{
     flex: 1 1 900px;
     text-align: left;
   }
@@ -40,18 +42,51 @@ html {
   }
 
 
+  .container{
+    background: rgb(255, 255, 255);
+    position: fixed;
+    top: 300px;
+    left: 0;
+    width: 225px;
+    height: 28.5%;
+    padding: 20px 0;
+    border-radius: 5px;
+    border: 1px solid #d4d4d4;
+  }
+
+
+  .side-link{
+    display: block;
+    padding: 13px 30px;
+    border-bottom: 1px solid #d4d4d4;
+    color: black;
+    font-size: 16px;
+    position: relative;
+    text-decoration: none;
+ }
+
+
+  .side-link:hover{
+    color: gray;
+  }
+
+
+
+
   #wholeblood {
     height: 400px;
-    margin-left: 30px;
+    margin-left: 230px;
     margin-right: 30px;
     margin-top:10px;
     margin-bottom: 20px;
     background-color: pink;
   }
+
+
   
   #powerred {
     height: 400px;
-    margin-left: 30px;
+    margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
     background-color: yellow;
@@ -59,7 +94,7 @@ html {
 
   #platelet {
     height: 400px;
-    margin-left: 30px;
+    margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
     background-color: pink;
@@ -67,7 +102,7 @@ html {
   
   #plasma {
     height: 400px;
-    margin-left: 30px;
+    margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
     background-color: yellow;
