--- a/front-end/src/styles/Eligibility.css
+++ b/front-end/src/styles/Eligibility.css
@@ -34,8 +34,22 @@ html {
     padding: 14px;
     color: rgb(0, 0, 0);
     text-decoration: underline;
-    font-weight: bold;
+    font-size: 20px;
   }
+
+  .title {
+    display: inline-block;
+    text-align: center;
+    padding: 14px;
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
+    margin-left: 500px;
+    font-size: 50px;
+
+
+  }
+
+
 
   .links:hover {
     color: gray;
@@ -45,11 +59,21 @@ html {
   .container{
     background: rgb(255, 255, 255);
     position: fixed;
+    top: 345px;
+    left: 0;
+    width: 225px;
+    height: 25%;
+    border-radius: 5px;
+    border: 1px solid #d4d4d4;
+  }
+
+  .site-container{
+    background: rgb(255, 0, 0);
+    position: fixed;
     top: 300px;
     left: 0;
     width: 225px;
-    height: 28.5%;
-    padding: 20px 0;
+    height: 8%;
     border-radius: 5px;
     border: 1px solid #d4d4d4;
   }
@@ -58,15 +82,31 @@ html {
   .side-link{
     display: block;
     padding: 13px 30px;
-    border-bottom: 1px solid #d4d4d4;
+    border-top: 1px solid #d4d4d4;
     color: black;
     font-size: 16px;
     position: relative;
     text-decoration: none;
  }
 
+  .findSite-link{
+    display: block;
+    padding: 13px 30px;
+    border-bottom: 1px solid #d4d4d4;
+    color: white;
+    font-size: 16px;
+    position: relative;
+    text-decoration: none;
+  }
+
+
+
 
   .side-link:hover{
+    color: gray;
+  }
+
+  .findSite-link:hover{
     color: gray;
   }
 
@@ -79,7 +119,6 @@ html {
     margin-right: 30px;
     margin-top:10px;
     margin-bottom: 20px;
-    background-color: pink;
   }
 
 
@@ -88,8 +127,9 @@ html {
     height: 400px;
     margin-left: 230px;
     margin-right: 30px;
+    margin-top: 150px;
     margin-bottom: 20px;
-    background-color: yellow;
+
   }
 
   #platelet {
@@ -97,7 +137,8 @@ html {
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    background-color: pink;
+    margin-top: 150px;
+ 
   }
   
   #plasma {
@@ -105,7 +146,8 @@ html {
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    background-color: yellow;
+    margin-top: 150px;
+    
   }
   
   
