--- a/front-end/src/styles/Header.css
+++ b/front-end/src/styles/Header.css
@@ -12,7 +12,7 @@
   justify-content: center;
   font-size: calc(10px + 1vmin);
   color: black;
-  position: fixed;
+  position: sticky;
   width: 100%;
 }
 
