--- a/front-end/src/styles/Eligibility.css
+++ b/front-end/src/styles/Eligibility.css
@@ -15,35 +15,26 @@ html {
     padding-top: 5em;
   }
 
-  .eligibilitynav{
-    display: flex;
-    top: 100px;
-    width: 100%;
-    overflow: auto;
-    height: auto;
-  }
 
-  .eligibilityleft-links{
-    flex: 1 1 900px;
-    text-align: left;
-  }
 
   .backlink {
-    display: inline-block;
-    text-align: right;
-    padding: 14px;
+    text-align: left;
     color: rgb(0, 0, 0);
     text-decoration: underline;
     font-size: 20px;
   }
 
+  .movelink {
+    margin-top: 5px;
+  }
+  
+
   .title {
     display: inline-block;
     text-align: center;
-    padding: 14px;
     color: rgb(0, 0, 0);
     font-weight: bolder;
-    margin-left: 500px;
+    margin-left: 200px;
     font-size: 50px;
 
 
@@ -56,13 +47,23 @@ html {
   }
 
 
+  .sidenav {
+    width: 255px;
+    height: 1500px;
+    position: fixed;
+    top: 62px;
+    left: 0;
+    background: rgb(255, 255, 255);
+    overflow-x: hidden;
+  }
+  
+
   .container{
     background: rgb(255, 255, 255);
     position: fixed;
-    top: 345px;
+    top: 145px;
     left: 0;
-    width: 225px;
-    height: 25%;
+    width: 245px;
     border-radius: 5px;
     border: 1px solid #d4d4d4;
   }
@@ -70,12 +71,23 @@ html {
   .site-container{
     background: rgb(255, 0, 0);
     position: fixed;
-    top: 300px;
+    top: 110px;
     left: 0;
-    width: 225px;
-    height: 8%;
+    width: 245px;
     border-radius: 5px;
     border: 1px solid #d4d4d4;
+    border-left: 10px;
+  }
+
+  .help-container{
+    background: rgb(255, 0, 0);
+    position: fixed;
+    top: 638px;
+    left: 0;
+    width: 245px;
+    border-radius: 5px;
+    border: 1px solid #d4d4d4;
+    border-left: 10px;
   }
 
 
@@ -84,7 +96,7 @@ html {
     padding: 13px 30px;
     border-top: 1px solid #d4d4d4;
     color: black;
-    font-size: 16px;
+    font-size: 12px;
     position: relative;
     text-decoration: none;
  }
@@ -97,6 +109,8 @@ html {
     font-size: 16px;
     position: relative;
     text-decoration: none;
+    font-size: 12px;
+    font-weight: bolder;
   }
 
 
@@ -107,6 +121,10 @@ html {
   }
 
   .findSite-link:hover{
+    color: gray;
+  }
+
+  .backlink:hover{
     color: gray;
   }
 
@@ -142,6 +160,79 @@ html {
   }
   
   #plasma {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 150px;
+    
+  }
+
+
+  #meds {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 150px;
+    
+  }
+
+
+  #general {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 350px;
+    
+  }
+
+
+  #travel {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    
+  }
+
+
+
+  #medcond {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 150px;
+    
+  }
+
+
+
+  #medtreat {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 150px;
+    
+  }
+
+
+  #life {
+    height: 400px;
+    margin-left: 230px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-top: 150px;
+    
+  }
+
+
+  
+  #std {
     height: 400px;
     margin-left: 230px;
     margin-right: 30px;
