--- a/front-end/src/styles/Eligibility.css
+++ b/front-end/src/styles/Eligibility.css
@@ -25,7 +25,7 @@ html {
   }
 
   .movelink {
-    margin-top: 5px;
+    margin-top: 70px;
   }
   
 
@@ -51,10 +51,11 @@ html {
     width: 255px;
     height: 1500px;
     position: fixed;
-    top: 62px;
+    top: 0px;
     left: 0;
+    z-index: 1;
     background: rgb(255, 255, 255);
-    overflow-x: hidden;
+    overflow: auto;
   }
   
 
@@ -82,7 +83,7 @@ html {
   .help-container{
     background: rgb(255, 0, 0);
     position: fixed;
-    top: 638px;
+    top: 625px;
     left: 0;
     width: 245px;
     border-radius: 5px;
@@ -170,7 +171,7 @@ html {
 
 
   #meds {
-    height: 400px;
+    height: 980px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
@@ -180,64 +181,59 @@ html {
 
 
   #general {
-    height: 400px;
+    height: 565px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    margin-top: 350px;
     
   }
 
 
   #travel {
-    height: 400px;
+    height: 565px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    margin-top: 30px;
     
   }
 
 
 
   #medcond {
-    height: 400px;
+    height: 2418px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    margin-top: 150px;
     
   }
 
 
 
   #medtreat {
-    height: 400px;
+    height: 860px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    margin-top: 150px;
-    
+ 
   }
 
 
   #life {
-    height: 400px;
+    height: 910px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    margin-top: 150px;
+    margin-top: 15px;
     
   }
 
 
   
   #std {
-    height: 400px;
+    height: 910px;
     margin-left: 230px;
     margin-right: 30px;
     margin-bottom: 20px;
-    margin-top: 150px;
     
   }
   
