--- a/front-end/src/styles/Header.css
+++ b/front-end/src/styles/Header.css
@@ -13,7 +13,10 @@
   font-size: calc(10px + 1vmin);
   color: black;
   position: sticky;
-  width: 100%;
+  width: auto;
+  min-width: 1400px;
+  margin-top:-20px;
+  z-index: 2;
 }
 
 
@@ -30,7 +33,7 @@
 }
 .nav-item {
   display: inline-block;
-  padding: 10px 15px;
+  padding: 10px 15px 5px 20px;
 }
 
 .nav-item a {
