Updated home content, contact us

--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -3,3 +3,14 @@
     margin-top: 80px;
     padding: 0px;
 }
+
+.home-card{
+    padding: 10px;
+}
+.home-card:hover{
+    background-color: rgb(240, 235, 233);
+}
+.video-card{
+    z-index: 0 !important;
+    box-shadow: none !important;
+}
