--- a/front-end/src/styles/ContactUs.css
+++ b/front-end/src/styles/ContactUs.css
@@ -3,3 +3,19 @@
     margin-top: 80px;
     padding: 0px;
 }
+.contact-h1{
+    text-align: left;
+    margin: 20px;
+}
+
+.contactItem{
+    margin: 20px;
+    display: flex;
+}
+.ion-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    margin-right: 20px;
+}
