--- a/front-end/src/styles/DonationElig.css
+++ b/front-end/src/styles/DonationElig.css
@@ -9,3 +9,18 @@ body{
     padding: 15px;
     text-align: left;
 }
+
+ul{
+    list-style-type: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.firstQ {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.secondQ {
+    padding-top: 10px;
+}
